--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://marcin-rudko1997.github.io/BurgerBuilder",
   "name": "burger_app",
   "version": "0.1.0",
   "private": true,
@@ -117,6 +118,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
-  
 }
